--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
-<html>
+<html lang="en">
 
-<head>
-  <metacharset="utf-8" />
-  <title>
-    QuoteGen
-  </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
-</head>
-<body>
-  <div class="contain">
-    <div class="executed" id="quote">
+  <head>
+      <meta charset="utf-8">
+      <title>
+          QuoteGenv2
+      </title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel = "stylesheet" href = "style.css">
+      <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+  </head>
+  <body>
+    <div class = "contain">
+      <div class = "executed" id="quote">
+      </div>
+      <div id = "writer">
+      </div>
+      <div class="bottom">
+        <h2> press space be inspired </h2>
+      </div>
     </div>
-    <div id="writer">
-    </div>
-    <div class="bottom">
-      <h2> press space to inspire </h2>
-    </div>
-  </div>
-</body>
-<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+  </body>
+
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
   <script src="app.js"></script>
-  
-</html>
+  </html>
